2004-01-14  Jody Goldberg <jody@gnome.org>

	* Release 2.5.2

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1.1

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1

2003-10-28  Jody Goldberg <jody@gnome.org>

	* Release 2.5.0

2003-09-30  Danilo Šegan  <dsegan@gmx.net>

	* drwright.c (update_tooltip): Use ngettext for plural-forms,
	fixes bug #117997. 

2003-08-24  Richard Hult  <richard@imendio.com>

	* Makefile.am:
	* drw-break-window.c:
	* drwright.c: Multihead support, fixes bug #119827.

Thu Jul 31 17:41:45 2003  Jonathan Blandford  <jrb@redhat.com>

	* drwright.c (popup_preferences_cb): add properties dialog,
	#118323

Thu Jul 31 14:56:41 2003  Jonathan Blandford  <jrb@redhat.com>

	* drwright.c (popup_quit_cb): remove bogus popup_quit code.

Thu Jul 31 14:56:13 2003  Jonathan Blandford  <jrb@redhat.com>

	* ChangeLog: Started a new ChangeLog for the typing break.
