@@ -1,3 +1,13 @@
+2004-02-01  Richard Hult  <richard@imendio.com>
+
+	Fixes bug #126179:
+	
+	* drw-break-window.c (drw_break_window_init): Add mnemonic to
+	postpone button.
+
+	* drwright.c (maybe_change_state): Grab keyboard so the mnemonic
+	actually works.
+
 2004-01-14  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.5.2
